Add Setting for JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 server.port=8081
+#DataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/authorization_test
+spring.datasource.hikari.pool-name=authorization_pooL_name
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.hikari.connectionTimeout=5000
+spring.datasource.hikari.validationTimeout=1000
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.max-lifetime=1800000
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.hikari.leak-detection-threshold=0
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+#Encoding 설정
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+#multipartFile 용량 제한
+spring.servlet.multipart.max-file-size=8MB
+spring.jpa.hibernate.ddl-auto=create-drop
+#jwt 키값
+jwt.secret=authorization_test
+
