--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ server.servlet.encoding.force=true
 #multipartFile 용량 제한
 spring.servlet.multipart.max-file-size=8MB
 spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.root=info
 #jwt 키값
 jwt.secret=authorization_test
+
 
